--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lib-core",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "The lib-core Angular library",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
