--- a/projects/lib-core/package.json
+++ b/projects/lib-core/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "lib-core",
+  "name": "@stephaneeybert/lib-core",
   "version": "0.0.1",
   "description": "The lib-core Angular library",
   "keywords": [
     "Angular",
     "Library"
   ],
+  "author": "stephane",
   "license": "SEE LICENSE IN LICENSE",
   "repository": {
     "type": "git",
     "url": "https://github.com/stephaneeyber/lib-core"
   },
-  "homepage": "",
+  "homepage": "https://github.com/stephaneeyber/lib-core#readme",
   "peerDependencies": {
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.2",
