--- a/projects/lib-core/tsconfig.lib.json
+++ b/projects/lib-core/tsconfig.lib.json
@@ -5,6 +5,10 @@
     "target": "es2015",
     "declaration": true,
     "inlineSources": true,
+    "typeRoots": [
+      "typings",
+      "node_modules/@types"
+    ],
     "types": [],
     "lib": [
       "dom",
@@ -17,6 +21,10 @@
     "enableResourceInlining": true
   },
   "exclude": [
+    // IDEs should not type-check the different node_modules directories of the different packages.
+    // This would cause the IDEs to be slower and also linters would check the node_modules.
+    "node_modules/",
+    "typings",
     "src/test.ts",
     "**/*.spec.ts"
   ]
