--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "typeRoots": [
+      "projects/lib-core/typings",
+      "node_modules/@types"
+    ],
     "lib": [
       "es2018",
       "dom"
@@ -31,5 +35,13 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
-  }
+  },
+  "exclude": [
+    // IDEs should not type-check the different node_modules directories of the different packages.
+    // This would cause the IDEs to be slower and also linters would check the node_modules.
+    "node_modules/",
+    "projects/lib-core/typings",
+    "src/test.ts",
+    "**/*.spec.ts"
+  ]
 }
