--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lib-core",
-  "version": "0.1.52",
+  "version": "0.1.53",
   "description": "The lib-core Angular library",
   "scripts": {
     "ng": "ng",
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@stephaneeybert/lib-core": "^0.1.53",
     "file-saver": "^2.0.2",
     "ng-environmenter": "^0.1.2",
     "rxjs": "~6.5.4",
@@ -39,9 +40,9 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
