--- a/projects/lib-core/package.json
+++ b/projects/lib-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stephaneeybert/lib-core",
-  "version": "0.1.53",
+  "version": "0.1.58",
   "description": "The lib-core Angular library",
   "keywords": [
     "Angular",
@@ -13,19 +13,23 @@
     "url": "https://github.com/stephaneeyber/lib-core"
   },
   "homepage": "https://github.com/stephaneeyber/lib-core#readme",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
-    "@angular/animations": "~9.1.0",
-    "@angular/cdk": "^9.2.2",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/forms": "~9.1.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
-    "ng-environmenter": "^0.1.2",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "~11.0.1",
+    "@angular/common": "~11.0.1",
+    "@angular/compiler": "~11.0.1",
+    "@angular/core": "~11.0.1",
+    "@angular/forms": "~11.0.1",
+    "@angular/platform-browser": "~11.0.1",
+    "@angular/platform-browser-dynamic": "~11.0.1",
+    "@angular/router": "~11.0.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2",
+    "@angular/cdk": "^11.0.0",
+    "file-saver": "^2.0.5",
+    "ng-environmenter": "^0.1.2"
   }
 }
