--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
-    "file-saver": "^2.0.5",
-    "ng-environmenter": "^0.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+
+    "file-saver": "^2.0.5",
+    "ng-environmenter": "^0.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
