--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lib-core",
-  "version": "0.1.63",
+  "version": "0.1.69",
   "description": "The lib-core Angular library",
   "scripts": {
     "ng": "ng",
@@ -18,39 +18,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.1",
-    "@angular/common": "~11.0.1",
-    "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
-    "@angular/forms": "~11.0.1",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@angular/cdk": "^11.0.0",
+    "@angular/animations": "~13.3.1",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "~13.3.1",
+    "@angular/compiler": "~13.3.1",
+    "@angular/core": "~13.3.1",
+    "@angular/forms": "~13.3.1",
+    "@angular/platform-browser": "~13.3.1",
+    "@angular/platform-browser-dynamic": "~13.3.1",
+    "@angular/router": "~13.3.1",
     "file-saver": "^2.0.5",
-    "ng-environmenter": "^0.1.2"
+    "ng-environmenter": "^0.1.2",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.5",
+    "flatted": "~3.2.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "@angular-devkit/build-angular": "~13.3.1",
+    "@angular/cli": "~13.3.1",
+    "@angular/compiler-cli": "~13.3.1",
+    "@types/jasmine": "~4.0.2",
+    "@types/node": "^17.0.23",
+    "@types/estree": "~0.0.51",
+    "jasmine-core": "~4.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.0",
+    "karma-jasmine": "~4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-packagr": "^13.3.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "eslint": "~8.12.0",
+    "typescript": "~4.6.3"
   }
 }
