--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lib-core",
-  "version": "0.1.70",
+  "version": "0.1.71",
   "description": "The lib-core Angular library",
   "scripts": {
     "ng": "ng",
@@ -18,40 +18,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.3.0",
-    "@angular/cdk": "^13.3.1",
-    "@angular/common": "~14.3.0",
-    "@angular/compiler": "~14.3.0",
-    "@angular/core": "~14.3.0",
-    "@angular/forms": "~14.3.0",
-    "@angular/platform-browser": "~14.3.0",
-    "@angular/platform-browser-dynamic": "~14.3.0",
-    "@angular/router": "~14.3.0",
+    "@angular/animations": "^18.2.8",
+    "@angular/cdk": "^18.2.9",
+    "@angular/common": "^18.2.8",
+    "@angular/compiler": "^18.2.8",
+    "@angular/core": "^18.2.8",
+    "@angular/forms": "^18.2.8",
+    "@angular/platform-browser": "^18.2.8",
+    "@angular/platform-browser-dynamic": "^18.2.8",
+    "@angular/router": "^18.2.8",
     "file-saver": "^2.0.5",
-    "ng-environmenter": "^0.1.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.5",
-    "flatted": "~3.2.5"
+    "flatted": "~3.3.1",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/cli": "~13.3.1",
-    "@angular/compiler-cli": "~14.3.0",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
-    "@types/estree": "~0.0.51",
-    "jasmine-core": "~4.0.1",
+    "@angular-devkit/build-angular": "^18.2.9",
+    "@angular/cli": "^18.2.9",
+    "@angular/compiler-cli": "^18.2.8",
+    "@types/estree": "~1.0.6",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^22.7.7",
+    "eslint": "~9.13.0",
+    "jasmine-core": "~5.4.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.17",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.2",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^13.3.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ng-packagr": "^18.2.1",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "eslint": "~8.12.0",
-    "typescript": "~4.6.3"
+    "ts-node": "~10.9.2",
+    "typescript": ">=5.4.0 and <5.6.0"
   }
 }
