--- a/projects/lib-core/package.json
+++ b/projects/lib-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stephaneeybert/lib-core",
-  "version": "0.1.70",
+  "version": "0.1.71",
   "description": "The lib-core Angular library",
   "keywords": [
     "Angular",
@@ -17,18 +17,16 @@
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
-    "@angular/animations": "~13.3.1",
-    "@angular/common": "~13.3.1",
-    "@angular/compiler": "~13.3.1",
-    "@angular/core": "~13.3.1",
-    "@angular/forms": "~13.3.1",
-    "@angular/platform-browser": "~13.3.1",
-    "@angular/platform-browser-dynamic": "~13.3.1",
-    "@angular/router": "~13.3.1",
-    "@angular/cdk": "^13.3.1",
-    "rxjs": "~6.6.0",
-    "zone.js": "~0.11.5",
+    "@angular/animations": "^18.2.8",
+    "@angular/cdk": "^18.2.9",
+    "@angular/common": "^18.2.8",
+    "@angular/compiler": "^18.2.8",
+    "@angular/core": "^18.2.8",
+    "@angular/forms": "^18.2.8",
+    "@angular/platform-browser": "^18.2.8",
+    "@angular/platform-browser-dynamic": "^18.2.8",
+    "@angular/router": "^18.2.8",
     "file-saver": "^2.0.5",
-    "ng-environmenter": "^0.1.2"
+    "rxjs": "~6.6.0"
   }
 }
