--- a/projects/lib-core/package.json
+++ b/projects/lib-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stephaneeybert/lib-core",
-  "version": "0.1.71",
+  "version": "0.1.72",
   "description": "The lib-core Angular library",
   "keywords": [
     "Angular",
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/router": "^18.2.8",
     "file-saver": "^2.0.5",
-    "rxjs": "~6.6.0"
+    "flatted": "~3.3.1",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.0"
   }
 }
